# sbl_ota

./: Dockerfile  README.md
mcuxsdk/middleware/multicore/: middleware_multicore_mcmgr_k32l3a6.cmake
mcuxsdk/rtos/azure-rtos_1170/: middleware_azure_rtos_azure_iot_MIMXRT1176_cm7.cmake  middleware_azure_rtos_nxd_template_MIMXRT1176_cm7.cmake
mcuxsdk/rtos/freertos/freertos_kernel/: middleware_freertos-kernel_heap_3.cmake  middleware_freertos-kernel_heap_4.cmake  middleware_freertos-kernel_mpu_wrappers.cmake
mcuxsdk/rtos/freertos/freertos_kernel/portable/GCC/ARM_CA9/: portmacro.h
mcuxsdk/rtos/freertos/freertos_kernel/portable/IAR/ARM_CA9/: portmacro.h
mcuxsdk/rtos/freertos/freertos_kernel/portable/IAR/ARM_CM0/: portmacro.h
mcuxsdk/rtos/freertos/freertos_kernel/portable/RVDS/ARM_CA9/: portmacro.h
mcuxsdk/rtos/freertos/freertos_kernel/template/ARM_CA9/: FreeRTOSConfig.h
proj_1170/sbl_ota/cm7/armgcc/: CMakeLists.txt  azure_iot_adu_addon.cmake  config.cmake  dns_adu_addon.cmake  flags.cmake
proj_1170/sbl_ota/cm7/azure_iot_adu_addon/: nx_azure_iot.c  nx_azure_iot.h  nx_azure_iot_adu_agent.c  nx_azure_iot_adu_agent.h  nx_azure_iot_adu_root_key.c  nx_azure_iot_hub_client.c  nx_azure_iot_hub_client.h  nx_azure_iot_hub_transport.c  nx_azure_iot_hub_transport.h  nx_azure_iot_json_reader.c  nx_azure_iot_json_reader.h  nx_azure_iot_json_writer.c  nx_azure_iot_json_writer.h  nx_azure_iot_pnp_client.c  nx_azure_iot_pnp_client.h  nx_azure_iot_provisioning_client.c  nx_azure_iot_provisioning_client.h
proj_1170/sbl_ota/cm7/azure_iot_adu_addon/azure_iot_security_module/: nx_azure_iot_security_module.c
proj_1170/sbl_ota/cm7/azure_iot_adu_addon/azure_iot_security_module/configs/: RTOS_BASE.dist  RTOS_BASE_UT.dist  asc_config.h.in
proj_1170/sbl_ota/cm7/azure_iot_adu_addon/azure_iot_security_module/iot-security-module-core/cmake-modules/: asc_security_coreBuild.cmake  asc_security_core_build_rules.cmake
proj_1170/sbl_ota/cm7/azure_iot_adu_addon/azure_iot_security_module/iot-security-module-core/configs/: asc_config.h.in  base_dist.cmake  functions.cmake  groups_configuration.cmake
proj_1170/sbl_ota/cm7/azure_iot_adu_addon/docs/: README.md  azure_rtos_iot_adu_agent.md  azure_rtos_iot_hub_client.md  azure_rtos_iot_json.md  azure_rtos_iot_pnp_client.md  azure_rtos_iot_provisioning_client.md  azure_rtos_iot_sdk_api.md
proj_1170/sbl_ota/cm7/src/: board_setup.c  flash_info.h  flexspi_flash.h  flexspi_nor_edma_transfer.c  flexspi_nor_flash_ops.c  main.c  sample_config.h  sbl_ota_flag.c  sbl_ota_flag.h
